# SAMSON

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  NuGet.Config  README.md  vcpkg-configuration.json.in  vcpkg.json
CLI/test/: CMakeLists.txt  SamsonCLI_test.cpp
tests/: CMakeLists.txt  samson_core_test.cpp
tests/verification/: conda_env.yml
tests/verification/cases/collisions_ship_object/drift_quantification/: check.py  documentation.rst
tests/verification/cases/collisions_ship_object/measure_anchor_function/: check.py  config.yaml  documentation.rst
tests/verification/cases/collisions_ship_object/measure_anchor_function/Area/: current.csv  vertices.csv
tests/verification/cases/collisions_ship_object/measure_anchor_function/Measures/: config.yaml
tests/verification/cases/collisions_ship_object/measure_anchor_function/ModelData/: shiplinkdata.csv
tests/verification/cases/collisions_ship_object/measure_anchor_function/Traffic/: shipcategories.csv  shiplinks.csv
tests/verification/cases/collisions_ship_object/measure_engine_repair_function/: check.py  documentation.rst  figure.qgz  main.py
tests/verification/cases/collisions_ship_object/measure_engine_repair_function/Area/: links.csv  objects.csv  weatherstations.csv  winddirection.csv  windstrength.csv
tests/verification/cases/collisions_ship_object/measure_engine_repair_function/Causation/: causationfactors.csv
tests/verification/cases/collisions_ship_object/measure_engine_repair_function/Measures/: config.yaml
tests/verification/cases/collisions_ship_object/minimum_passing_distance/: check.py  documentation.rst  main.py  main.toml
tests/verification/cases/collisions_ship_object/minimum_passing_distance/case1/: config.yaml  measure_config.yaml
tests/verification/cases/events_ship_object/causation_factors/: actions.txt  check.py  config.yaml  documentation.rst  figure.qgz
tests/verification/cases/events_ship_object/causation_factors/Area/: objects.csv  vertices.csv  weatherstations.csv  winddirection.csv  windstrength.csv
tests/verification/cases/events_ship_object/causation_factors/Causation/: causationfactors.csv
tests/verification/cases/events_ship_object/causation_factors/Traffic/: shipcategories.csv
tests/verification/cases/events_ship_ship/causation_factors/: actions.txt  check.py  config.yaml  documentation.rst  figure.qgz  main.py
tests/verification/cases/events_ship_ship/causation_factors/Area/: links.csv  vertices.csv
tests/verification/cases/events_ship_ship/causation_factors/Causation/: causationfactors.csv
tests/verification/cases/exposures_ship_object_cell/direction_probabilities/: check.py  documentation.rst
tests/verification/cases/exposures_ship_object_cell/sliding_cell_through_object/: actions.txt  check.py  config.yaml  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_object_link/gradient_assessment/: check.py  config.yaml  documentation.rst  figure.qgz
tests/verification/cases/exposures_ship_object_link/large_object/: check.py  documentation.rst
tests/verification/cases/exposures_ship_object_link/link_discretization/: check.py  documentation.rst  main.py
tests/verification/cases/exposures_ship_object_link/object_discretization/: actions.txt  check.py  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_object_link/object_elevation/: check.py  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_object_link/ram_delta_y/: check.py  documentation.rst  main.py  main.toml
tests/verification/cases/exposures_ship_object_link/rotating_objects/: check.py  documentation.rst  main.toml
tests/verification/cases/exposures_ship_object_link/sliding_link/: check.py  documentation.rst  main.py
tests/verification/cases/exposures_ship_object_link/sublink_test/: check.py  documentation.rst  main.py
tests/verification/cases/exposures_ship_object_link/tidal_test/: check.py  documentation.rst  main.py
tests/verification/cases/exposures_ship_object_link/wind_vs_current/: check.py  documentation.rst  main.py
tests/verification/cases/exposures_ship_ship_cell/specified_heading/: check.py  config.yaml  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_ship_cell/uniform_heading/: check.py  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_ship_link_cell/rotating_link_within_cell/: check.py  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_ship_link_cell/sliding_distribution_link/: check.py  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_ship_link_cell/sliding_link_over_two_cells/: check.py  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_ship_link_cell/sliding_link_through_cell/: check.py  config.yaml  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_ship_link_link/crossing_model/: check.py  documentation.rst  main.py
tests/verification/cases/exposures_ship_ship_link_link/crossing_model_multiple_links/: actions.txt  check.py  documentation.rst  figure.qgz
tests/verification/cases/exposures_ship_ship_link_link/head-on_model/: check.py  documentation.rst
tests/verification/cases/exposures_ship_ship_link_link/head-on_model_distribution/: check.py  documentation.rst  main.toml
tests/verification/cases/exposures_ship_ship_link_link/link_discretization_0/: check.py  documentation.rst  figure.qgz
tests/verification/cases/exposures_ship_ship_link_link/link_discretization_1/: actions.txt  check.py  documentation.rst  figure.qgz  main.py
tests/verification/cases/exposures_ship_ship_link_link/overtaking_model/: check.py  documentation.rst  figure.qgz
tests/verification/cases/exposures_ship_ship_link_link/overtaking_model_distribution/: check.py  config.yaml  documentation.rst  figure.qgz
tests/verification/cases/utils/: gis.py  samson.py  testing.py
(+442 files in other folders)
